# terminal

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: commands.js  layout.js  main.js  palette.js  shell-picker.js  style.css  tabs.js  terminal.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  main.rs  pty.rs  shell.rs  ssh.rs
