[package]
name = "terminal"
version = "0.1.0"
description = "Tiling terminal emulator"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
portable-pty = "0.8"
dirs = "5"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
